Load doors and placeables onto the scene in new game

--- a/src/libs/game/CMakeLists.txt
+++ b/src/libs/game/CMakeLists.txt
@@ -491,7 +491,9 @@ set(GAME_SOURCES
     ${GAME_SOURCE_DIR}/neo/object.cpp
     ${GAME_SOURCE_DIR}/neo/object/area.cpp
     ${GAME_SOURCE_DIR}/neo/object/creature.cpp
+    ${GAME_SOURCE_DIR}/neo/object/door.cpp
     ${GAME_SOURCE_DIR}/neo/object/module.cpp
+    ${GAME_SOURCE_DIR}/neo/object/placeable.cpp
     ${GAME_SOURCE_DIR}/object.cpp
     ${GAME_SOURCE_DIR}/object/area.cpp
     ${GAME_SOURCE_DIR}/object/camera/animated.cpp
