--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -42,7 +42,9 @@ set(TESTS_SOURCES
     ${TESTS_SOURCE_DIR}/game/neo/game.cpp
     ${TESTS_SOURCE_DIR}/game/neo/object.cpp
     ${TESTS_SOURCE_DIR}/game/neo/object/area.cpp
+    ${TESTS_SOURCE_DIR}/game/neo/object/door.cpp
     ${TESTS_SOURCE_DIR}/game/neo/object/module.cpp
+    ${TESTS_SOURCE_DIR}/game/neo/object/placeable.cpp
     ${TESTS_SOURCE_DIR}/graphics/aabb.cpp
     ${TESTS_SOURCE_DIR}/graphics/format/bwmreader.cpp
     ${TESTS_SOURCE_DIR}/graphics/format/mdlmdxreader.cpp
