Move Console to engine level, enable in new game

--- a/src/apps/reone/CMakeLists.txt
+++ b/src/apps/reone/CMakeLists.txt
@@ -16,6 +16,7 @@
 set(REONE_SOURCE_DIR ${CMAKE_SOURCE_DIR}/src/apps/reone)
 
 set(REONE_HEADERS
+    ${REONE_SOURCE_DIR}/console.h
     ${REONE_SOURCE_DIR}/engine.h
     ${REONE_SOURCE_DIR}/options.h
     ${REONE_SOURCE_DIR}/optionsparser.h
@@ -23,6 +24,7 @@ set(REONE_HEADERS
 
 set(REONE_SOURCES
     ${CMAKE_SOURCE_DIR}/src/apps/highperfgfx.cpp
+    ${REONE_SOURCE_DIR}/console.cpp
     ${REONE_SOURCE_DIR}/engine.cpp
     ${REONE_SOURCE_DIR}/main.cpp
     ${REONE_SOURCE_DIR}/optionsparser.cpp
