Use parsed 2DA rows to load new game objects

--- a/src/libs/resource/CMakeLists.txt
+++ b/src/libs/resource/CMakeLists.txt
@@ -53,6 +53,26 @@ set(RESOURCE_HEADERS
     ${RESOURCE_INCLUDE_DIR}/id.h
     ${RESOURCE_INCLUDE_DIR}/layout.h
     ${RESOURCE_INCLUDE_DIR}/ltr.h
+    ${RESOURCE_INCLUDE_DIR}/parser/2da/appearance.h
+    ${RESOURCE_INCLUDE_DIR}/parser/2da/genericdoors.h
+    ${RESOURCE_INCLUDE_DIR}/parser/2da/heads.h
+    ${RESOURCE_INCLUDE_DIR}/parser/2da/placeables.h
+    ${RESOURCE_INCLUDE_DIR}/parser/2da/portraits.h
+    ${RESOURCE_INCLUDE_DIR}/parser/gff/are.h
+    ${RESOURCE_INCLUDE_DIR}/parser/gff/dlg.h
+    ${RESOURCE_INCLUDE_DIR}/parser/gff/git.h
+    ${RESOURCE_INCLUDE_DIR}/parser/gff/gui.h
+    ${RESOURCE_INCLUDE_DIR}/parser/gff/ifo.h
+    ${RESOURCE_INCLUDE_DIR}/parser/gff/pth.h
+    ${RESOURCE_INCLUDE_DIR}/parser/gff/utc.h
+    ${RESOURCE_INCLUDE_DIR}/parser/gff/utd.h
+    ${RESOURCE_INCLUDE_DIR}/parser/gff/ute.h
+    ${RESOURCE_INCLUDE_DIR}/parser/gff/uti.h
+    ${RESOURCE_INCLUDE_DIR}/parser/gff/utm.h
+    ${RESOURCE_INCLUDE_DIR}/parser/gff/utp.h
+    ${RESOURCE_INCLUDE_DIR}/parser/gff/uts.h
+    ${RESOURCE_INCLUDE_DIR}/parser/gff/utt.h
+    ${RESOURCE_INCLUDE_DIR}/parser/gff/utw.h
     ${RESOURCE_INCLUDE_DIR}/path.h
     ${RESOURCE_INCLUDE_DIR}/provider/2das.h
     ${RESOURCE_INCLUDE_DIR}/provider/audioclips.h
@@ -77,21 +97,6 @@ set(RESOURCE_HEADERS
     ${RESOURCE_INCLUDE_DIR}/resref.h
     ${RESOURCE_INCLUDE_DIR}/strings.h
     ${RESOURCE_INCLUDE_DIR}/talktable.h
-    ${RESOURCE_INCLUDE_DIR}/parser/gff/are.h
-    ${RESOURCE_INCLUDE_DIR}/parser/gff/dlg.h
-    ${RESOURCE_INCLUDE_DIR}/parser/gff/git.h
-    ${RESOURCE_INCLUDE_DIR}/parser/gff/gui.h
-    ${RESOURCE_INCLUDE_DIR}/parser/gff/ifo.h
-    ${RESOURCE_INCLUDE_DIR}/parser/gff/pth.h
-    ${RESOURCE_INCLUDE_DIR}/parser/gff/utc.h
-    ${RESOURCE_INCLUDE_DIR}/parser/gff/utd.h
-    ${RESOURCE_INCLUDE_DIR}/parser/gff/ute.h
-    ${RESOURCE_INCLUDE_DIR}/parser/gff/uti.h
-    ${RESOURCE_INCLUDE_DIR}/parser/gff/utm.h
-    ${RESOURCE_INCLUDE_DIR}/parser/gff/utp.h
-    ${RESOURCE_INCLUDE_DIR}/parser/gff/uts.h
-    ${RESOURCE_INCLUDE_DIR}/parser/gff/utt.h
-    ${RESOURCE_INCLUDE_DIR}/parser/gff/utw.h
     ${RESOURCE_INCLUDE_DIR}/types.h
     ${RESOURCE_INCLUDE_DIR}/typeutil.h)
 
@@ -125,6 +130,21 @@ set(RESOURCE_SOURCES
     ${RESOURCE_SOURCE_DIR}/gameprobe.cpp
     ${RESOURCE_SOURCE_DIR}/gff.cpp
     ${RESOURCE_SOURCE_DIR}/ltr.cpp
+    ${RESOURCE_SOURCE_DIR}/parser/gff/are.cpp
+    ${RESOURCE_SOURCE_DIR}/parser/gff/dlg.cpp
+    ${RESOURCE_SOURCE_DIR}/parser/gff/git.cpp
+    ${RESOURCE_SOURCE_DIR}/parser/gff/gui.cpp
+    ${RESOURCE_SOURCE_DIR}/parser/gff/ifo.cpp
+    ${RESOURCE_SOURCE_DIR}/parser/gff/pth.cpp
+    ${RESOURCE_SOURCE_DIR}/parser/gff/utc.cpp
+    ${RESOURCE_SOURCE_DIR}/parser/gff/utd.cpp
+    ${RESOURCE_SOURCE_DIR}/parser/gff/ute.cpp
+    ${RESOURCE_SOURCE_DIR}/parser/gff/uti.cpp
+    ${RESOURCE_SOURCE_DIR}/parser/gff/utm.cpp
+    ${RESOURCE_SOURCE_DIR}/parser/gff/utp.cpp
+    ${RESOURCE_SOURCE_DIR}/parser/gff/uts.cpp
+    ${RESOURCE_SOURCE_DIR}/parser/gff/utt.cpp
+    ${RESOURCE_SOURCE_DIR}/parser/gff/utw.cpp
     ${RESOURCE_SOURCE_DIR}/provider/2das.cpp
     ${RESOURCE_SOURCE_DIR}/provider/audioclips.cpp
     ${RESOURCE_SOURCE_DIR}/provider/cursors.cpp
@@ -145,21 +165,6 @@ set(RESOURCE_SOURCES
     ${RESOURCE_SOURCE_DIR}/resources.cpp
     ${RESOURCE_SOURCE_DIR}/strings.cpp
     ${RESOURCE_SOURCE_DIR}/talktable.cpp
-    ${RESOURCE_SOURCE_DIR}/parser/gff/are.cpp
-    ${RESOURCE_SOURCE_DIR}/parser/gff/dlg.cpp
-    ${RESOURCE_SOURCE_DIR}/parser/gff/git.cpp
-    ${RESOURCE_SOURCE_DIR}/parser/gff/gui.cpp
-    ${RESOURCE_SOURCE_DIR}/parser/gff/ifo.cpp
-    ${RESOURCE_SOURCE_DIR}/parser/gff/pth.cpp
-    ${RESOURCE_SOURCE_DIR}/parser/gff/utc.cpp
-    ${RESOURCE_SOURCE_DIR}/parser/gff/utd.cpp
-    ${RESOURCE_SOURCE_DIR}/parser/gff/ute.cpp
-    ${RESOURCE_SOURCE_DIR}/parser/gff/uti.cpp
-    ${RESOURCE_SOURCE_DIR}/parser/gff/utm.cpp
-    ${RESOURCE_SOURCE_DIR}/parser/gff/utp.cpp
-    ${RESOURCE_SOURCE_DIR}/parser/gff/uts.cpp
-    ${RESOURCE_SOURCE_DIR}/parser/gff/utt.cpp
-    ${RESOURCE_SOURCE_DIR}/parser/gff/utw.cpp
     ${RESOURCE_SOURCE_DIR}/typeutil.cpp)
 
 add_library(resource STATIC ${RESOURCE_HEADERS} ${RESOURCE_SOURCES} ${CLANG_FORMAT_PATH})
