--- a/src/libs/game/CMakeLists.txt
+++ b/src/libs/game/CMakeLists.txt
@@ -279,10 +279,12 @@ set(GAME_HEADERS
     ${GAME_INCLUDE_DIR}/gui/sounds.h
     ${GAME_INCLUDE_DIR}/location.h
     ${GAME_INCLUDE_DIR}/neo/action.h
+    ${GAME_INCLUDE_DIR}/neo/actionexecutor.h
     ${GAME_INCLUDE_DIR}/neo/controller/playercamera.h
     ${GAME_INCLUDE_DIR}/neo/controller/selection.h
     ${GAME_INCLUDE_DIR}/neo/effect.h
     ${GAME_INCLUDE_DIR}/neo/event.h
+    ${GAME_INCLUDE_DIR}/neo/eventhandler.h
     ${GAME_INCLUDE_DIR}/neo/game.h
     ${GAME_INCLUDE_DIR}/neo/inventory.h
     ${GAME_INCLUDE_DIR}/neo/location.h
@@ -490,8 +492,10 @@ set(GAME_SOURCES
     ${GAME_SOURCE_DIR}/gui/saveload.cpp
     ${GAME_SOURCE_DIR}/gui/selectoverlay.cpp
     ${GAME_SOURCE_DIR}/gui/sounds.cpp
+    ${GAME_SOURCE_DIR}/neo/actionexecutor.cpp
     ${GAME_SOURCE_DIR}/neo/controller/playercamera.cpp
     ${GAME_SOURCE_DIR}/neo/controller/selection.cpp
+    ${GAME_SOURCE_DIR}/neo/eventhandler.cpp
     ${GAME_SOURCE_DIR}/neo/game.cpp
     ${GAME_SOURCE_DIR}/neo/object.cpp
     ${GAME_SOURCE_DIR}/neo/object/area.cpp
