--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -46,6 +46,7 @@ set(TESTS_SOURCES
     ${TESTS_SOURCE_DIR}/game/neo/object/door.cpp
     ${TESTS_SOURCE_DIR}/game/neo/object/module.cpp
     ${TESTS_SOURCE_DIR}/game/neo/object/placeable.cpp
+    ${TESTS_SOURCE_DIR}/game/neo/objectloader.cpp
     ${TESTS_SOURCE_DIR}/graphics/aabb.cpp
     ${TESTS_SOURCE_DIR}/graphics/format/bwmreader.cpp
     ${TESTS_SOURCE_DIR}/graphics/format/mdlmdxreader.cpp
