Use ubuntu-22.04 GitHub runner

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -7,31 +7,31 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
 
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Install dependencies
-      run: >
-        sudo sed -i 's/azure\.//' /etc/apt/sources.list &&
-        sudo apt-get update &&
-        sudo apt install libboost-all-dev libsdl2-dev libglew-dev libopenal-dev libmad0-dev libavcodec-dev libavformat-dev libavutil-dev libswresample-dev libswscale-dev libwxgtk3.0-gtk3-dev libgmock-dev
+      - name: Install dependencies
+        run: >
+          sudo sed -i 's/azure\.//' /etc/apt/sources.list &&
+          sudo apt-get update &&
+          sudo apt install libboost-all-dev libsdl2-dev libglew-dev libopenal-dev libmad0-dev libavcodec-dev libavformat-dev libavutil-dev libswresample-dev libswscale-dev libwxgtk3.0-gtk3-dev libgmock-dev
 
-    - name: Create Build Environment
-      run: cmake -E make_directory ${{github.workspace}}/build
+      - name: Create Build Environment
+        run: cmake -E make_directory ${{github.workspace}}/build
 
-    - name: Configure CMake
-      working-directory: ${{github.workspace}}/build
-      shell: bash
-      run: cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DBUILD_TESTS=ON -DBUILD_LAUNCHER=ON -DBUILD_TOOLKIT=ON -DBUILD_DATAMINER=ON
+      - name: Configure CMake
+        working-directory: ${{github.workspace}}/build
+        shell: bash
+        run: cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE
 
-    - name: Build
-      working-directory: ${{github.workspace}}/build
-      shell: bash
-      run: cmake --build .
+      - name: Build
+        working-directory: ${{github.workspace}}/build
+        shell: bash
+        run: cmake --build .
 
-    - name: Run Unit Tests
-      working-directory: ${{github.workspace}}/build
-      shell: bash
-      run: ctest -VV
+      - name: Run Unit Tests
+        working-directory: ${{github.workspace}}/build
+        shell: bash
+        run: ctest -VV
