--- a/.github/workflows/build-test-windows.yml
+++ b/.github/workflows/build-test-windows.yml
@@ -21,7 +21,7 @@ jobs:
           cmake -S . -B build `
             -G "Visual Studio 17 2022" -A x64 `
             -DCMAKE_BUILD_TYPE=Release `
-            -DCMAKE_TOOLCHAIN_FILE=$VCPKG_INSTALLATION_ROOT\scripts\buildsystems\vcpkg.cmake
+            -DCMAKE_TOOLCHAIN_FILE=C:\vcpkg\scripts\buildsystems\vcpkg.cmake
 
       - name: Build solution
         working-directory: ${{github.workspace}}/build
@@ -29,4 +29,4 @@ jobs:
 
       - name: Run tests
         working-directory: ${{github.workspace}}/build
-        run: ctest -V
+        run: ctest -VV
