--- a/.github/workflows/build-test-windows.yml
+++ b/.github/workflows/build-test-windows.yml
@@ -37,4 +37,4 @@ jobs:
 
       - name: Run tests
         working-directory: ${{github.workspace}}/build
-        run: ctest -VV
+        run: ctest -VV -C Release
